gitops/manifests/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    environment: production
    istio-injection: disabled
