gitops/manifests/app/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
  namespace: prod
  labels:
    app.kubernetes.io/name: redis-cache
    app.kubernetes.io/component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis-cache
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis-cache
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: redis
          image: redis:7.2-alpine
          command: ["redis-server", "--protected-mode", "no"]
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: prod
  labels:
    app.kubernetes.io/name: redis-cache
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app.kubernetes.io/name: redis-cache
